# rhfs_ris_openmp

./: .gitignore  CMakeLists.txt  CSF_OPTIMIZATION_README.md  Makefile  OPENMP_README.md  README.md  THREAD_SAFETY_ISSUES.md  apply_optimization.sh  benchmark.sh  benchmark_parallel.sh  build.sh  build_openmp.sh  further_optimize_io.sh  memory_optimization.sh  optimize_lodcsl.patch  optimize_system_memory.sh  preprocess_csf.sh  run_parallel.sh  run_with_memory_fs.sh  simple_memory_boost.sh  test_compile.sh  test_thread_safety_fix.sh
build-serial/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
build-serial/modules/mod/: buffer_c.mod  cnc_c.mod  cteilsrk_c.mod  def_c.mod  facts_c.mod  l2_c.mod  m_c.mod  orthct_c.mod  ovl_c.mod  peav_c.mod  sacoef_c.mod  trk_c.mod  whfrom_c.mod
build-serial/modules/mpiu90/: iniestmpi_i.mod
build-serial/src/lib/lib9290/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-serial/src/lib/libdvd90/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-serial/src/lib/libmcp90/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-serial/src/lib/libmod/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-serial/src/lib/librang90/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-serial/src/lib/mpi90/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-serial/src/rhfs90/: CTestTestfile.cmake  Makefile  cmake_install.cmake  engouth_i.mod  hfsgg_i.mod
lib/mod/: bess_c.mod  biorb_c.mod  blim_c.mod  blkidx_c.mod  corre_c.mod  default_c.mod  fixd_c.mod  hblock_c.mod  horb_c.mod  jj2lsj_c.mod  jj2lsjbio_c.mod  jqjc_c.mod  kkstartbreit_c.mod  mcpb_c.mod  mcpdata_c.mod  mtjj2_c.mod  npar_c.mod  npot_c.mod  orbord_c.mod  osc_c.mod  pote_c.mod  ribojj11_c.mod  ribojj_c.mod  stor_c.mod  tatb_c.mod  terms_c.mod  titl_c.mod
lib/mpiu90/: spicmvmpi_i.mod
src/lib/lib9290/: lodcsl.f90  lodcsl_optimized.f90
src/lib/libmod/: dumx_C.f90  m_C.f90
src/rhfs90/: BUILDCONF.sh  CMakeLists.txt  Makefile  engouth.f90  engouth_I.f90  gethfd.f90  gethfd_I.f90  getmixblock.f90  getmixblock_I.f90  hfs92.f90  hfsgg.f90  hfsgg_I.f90  matelt.f90  matelt_I.f90  opt6_C.f90  rinthf.f90  rinthf_I.f90  setdbg.f90  setdbg_I.f90  setsum.f90  setsum_I.f90  strsum.f90  strsum_I.f90
src/rhfszeeman95/: CMakeLists.txt  hfszeeman.f90
src/ris4/: CMakeLists.txt  densnew.f90  densnew_seltz.f90  fical.f90  getmixblock.f90  rintdensvec.f90  ris_cal.f90  smsnew.f90
